Updated index.html: address of questiondeclasses

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ MathJax.Hub.Config({
 <center>
 <table><tr>
 <td style="vertical-align:top;" align="center">
-<a href="http://www.questionsdeclasses.org/larevue/spip.php?article1">
+<a href="http://www.questionsdeclasses.org">
 <i>Le <b>manifeste</b> de cette revue p&eacute;dagogique, &eacute;ducative et
   sociale.</a>
 <br>
