Updated Maths/contenu.html: accents

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -119,7 +119,7 @@ en ont captur&eacute;s&raquo;
 
 <BR>
 <BR>
-<CENTER><FONT SIZE=+1><i>Presque tous les textes ci-dessous ont été publiés dans des
+<CENTER><FONT SIZE=+1><i>Presque tous les textes ci-dessous ont &eacute;t&eacute; publi&eacute;s dans des
 journaux. Ces journaux participent activement au
 d&eacute;veloppement des math&eacute;matiques ; Je ne souhaite pas les court-circuiter mais
 offrir un acc&egrave;s (1) rapide (2) &agrave; tous. J'encourage vivement les
