--- a/Jeux/Solitaire/SolitaireJeu.html
+++ b/Jeux/Solitaire/SolitaireJeu.html
@@ -198,7 +198,7 @@ javascript qui permettent d'explorer ce jeu. Ou d'y jouer !
               <input type="button" id="Dejouer"
                      style="width:150px;background-color:#CCCC33"
                      onClick="window.Jeu_Graphique_backward()"
-                     value="Revenir en arrière !">
+                     value="Revenir en arri&egrave;re !">
             </form>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
           <td valign="top"><i>Historique :</i>&nbsp;</td>
