accueil.html: ways to write have been updated

--- a/TME-EMT/accueil.html
+++ b/TME-EMT/accueil.html
@@ -279,7 +279,7 @@ think about :)
     <li>[B] Theorems, Lemmas, Propositions are coded via
     <blockquote>
     <br>
-    <<!---->span class="THM">Theorem (1986)<<!---->/span>
+    <<!---->br><<!---->span class="THM">Theorem (1986)<<!---->/span>
     <br>
     <<!---->blockquote class="outer-thm">
     <br>
@@ -291,7 +291,7 @@ think about :)
     </blockquote>
     </li>
     <li>[C] Mathematics are entered latex style and processed via
-    <a href="http://www.mathjax.org">MathJax</a>. Macros are to be avoided, of course.
+    <a href="https://www.mathjax.org">MathJax</a>. Macros are to be avoided, of course.
     <li>[D] A reference is introduced on one line in the form
     <<!---->script language="javascript">bibref("Ramare*12")<<!---->/script>
     where Ramare*12 is the key of the bibtex entry, which has to be
