Mathjax source updated

--- a/Jeux/Solitaire.html
+++ b/Jeux/Solitaire.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "https://www.w3.org/TR/html4/strict.dtd">
 <!-- Use the DOCTYPE string above if you want :hover to work!! -->
 
 <HTML>
@@ -772,7 +772,7 @@ function newAnglaisgame() {
 </script>
 </head>
 
-<body BACKGROUND="http://math.univ-lille1.fr/~ramare/trucs/fond-ens.jpg"
+<body BACKGROUND="../trucs/fond-ens.jpg"
       onLoad="window.newAnglaisgame()" >
 
 <center>
