--- a/CoursNouakchott/index.html
+++ b/CoursNouakchott/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+    "https://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!-- Use the DOCTYPE string above if you want :hover to work!! -->
 
 <HTML>
@@ -33,7 +33,7 @@ MathJax.Hub.Config({
 });
 </script>
 <script type="text/javascript"
-  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
    <TITLE>Olivier Ramar&eacute; : Le cours de Nouakchott 2012</TITLE>
