Paper to Preprint

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1293,7 +1293,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
 
   <!-- ============================= -->
   <li class="paper preprint"><script language="javascript">
-      Paper("Addendum to Modified Truncated Perron Formulae",
+      Preprint("Addendum to Modified Truncated Perron Formulae",
       "", "TruncatedPerron-5-Addendum-01.pdf",
       2021,3,
       "Addendum to 'Modified Truncated Perron Formulae'");
