Added RestrictionTheory-03.pdf and corrected some

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -405,6 +405,26 @@ of A. S&aacute;rk&ouml;zy.
       <div class="resumecontent">
       </div>
   </li>
+  <!-- ============================= -->
+    <li class="paper preprint"><script language="javascript">
+	Preprint("Notes on restriction theory in the primes",
+	"", "RestrictionTheory-03.pdf", 2021, 16, "Submitted");
+	nbrp();</script>
+      <div class="resumecontent">We study the mean
+  $\sum_{x\in\mathcal{X}} \bigl|\sum_{p\le N}{}u_p e(xp)\bigr|^{\ell}$ when
+  $\ell$ covers the full range $[2,\infty)$ and
+  $\mathcal{X}\subset\mathbb{R}/\mathbb{Z}$ is a {well-spaced} set,
+  providing a smooth transition from the case $\ell=2$ to the case
+  $\ell>2$ and improving on the results of J.~Bourgain and of B.~Green
+  and T.~Tao. A uniform Hardy-Littlewood property for the set of
+  primes
+  is established as well as a sharp upper bound
+  for $\sum_{x\in\mathcal{X}} \bigl|\sum_{p\le N}{}u_p e(xp)\bigr|^{\ell}$
+  when $\mathcal{X}$ is small. These results are extended to primes in
+  \emph{any} interval in a last section, provided the primes are
+  numerous enough therein.
+      </div>
+  </li>
 <!-- ============================= -->
   </ul><br>
   </li>
@@ -664,7 +684,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
   </li>
   
   <!-- ============================= -->
-  <li class="paper preprint"><script language="javascript">
+  <li class="paper"><script language="javascript">
       Paper("Products of primes in arithmetic progressions",
       "Priyamvad Srivastav, with an appendix of Oriol Serra", "Footnote-IJNT.pdf",
       "https://www.worldscientific.com/toc/ijnt/0/0", 
