Added OR_KV_new_version-06.pdf and corrected some

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -413,7 +413,7 @@ of A. S&aacute;rk&ouml;zy.
       <div class="resumecontent">We study the mean
   $\sum_{x\in\mathcal{X}} \bigl|\sum_{p\le N}{}u_p e(xp)\bigr|^{\ell}$ when
   $\ell$ covers the full range $[2,\infty)$ and
-  $\mathcal{X}\subset\mathbb{R}/\mathbb{Z}$ is a {well-spaced} set,
+  $\mathcal{X}\subset\mathbb{R}/\mathbb{Z}$ is a well-spaced set,
   providing a smooth transition from the case $\ell=2$ to the case
   $\ell>2$ and improving on the results of J.~Bourgain and of B.~Green
   and T.~Tao. A uniform Hardy-Littlewood property for the set of
@@ -421,7 +421,7 @@ of A. S&aacute;rk&ouml;zy.
   is established as well as a sharp upper bound
   for $\sum_{x\in\mathcal{X}} \bigl|\sum_{p\le N}{}u_p e(xp)\bigr|^{\ell}$
   when $\mathcal{X}$ is small. These results are extended to primes in
-  \emph{any} interval in a last section, provided the primes are
+  any interval in a last section, provided the primes are
   numerous enough therein.
       </div>
   </li>
@@ -835,7 +835,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       Our initial problem is to represent classes $m$ modulo $q$ by a sum
   of three summands, two being taken from rather small sets $\mathcal{A}$ and
   $\mathcal{B}$ and the third one having an odd number of prime factors (the
-  so-called \emph{irregular numbers} by S. Ramanujan) and
+  so-called irregular numbers by S. Ramanujan) and
   lying in a $[q^{20r}, q^{20r}+q^{16r}]$ for some given $r\ge1$. We show that it is always
   possible to do so provided that $|\mathcal{A}||\mathcal{B}|\ge q(\log q)^2$.
   This proof leads us to study the trigonometric polynomial over
@@ -857,6 +857,38 @@ $\sum_{q^{20r}\le s \le q^{20r}+q^{16r}}e(sa/q)\ll q^{16r}(\log q)/\sqrt{\varphi
     </div>
   </li>
   </ol><br>
+  </li>
+ <!-- ============================= -->
+    <li class="paper preprint"><script language="javascript">
+	Preprint("Exponential sums over primes with multiplicative  coefficients",
+	"G. Kasi Viswanadham", "OR_KV_new_version-06.pdf", 2021, 19, "Submitted");
+	nbrp();</script>
+      <div class="resumecontent">
+We consider exponential sums of the form 
+$$
+\sum_{X< p \leq 2X}f(p)(\log p) e(p\alpha)\; ,
+$$
+where the sum runs over the prime numbers $p\in (X, 2X]$  and $f$ is a
+multiplicative function satisfying certain growth conditions. As a
+consequence of our result, we consider the normalized Fourier
+coefficients $(a_g(n))$  of any
+eulerian $GL(n)$-cuspform $g$ that satisfies the Ramanujan conjecture as well as
+an estimate of the form
+$\max_{\alpha\in\mathbb{R}}|\sum_{\substack{n\leq X}} a_g(n)
+e(n\alpha)|\le X^\eta$ for some $\eta<1$. For such a form,
+we get that  
+$$
+\sum_{X<p\leq 2X} a_g(p)(\log p) e(p\alpha)\ll \frac{\sqrt{q}}{\varphi(q)}X\; ,
+$$ 
+where $\alpha$ is a real number such that
+$\left|\alpha-\frac{a}{q}\right|\ll X^{-1+\frac{1-\eta}{120}}$ for some
+$q\le X^{(1-\eta)/15}$. Under
+stronger restrictions and the same conditions on $\alpha$ and
+$a/q$, we also prove that
+$$
+\sum_{X<\ell\leq 2X} a_g(\ell)\mu(\ell) e(p\alpha)\ll X/\sqrt{q}\;.
+$$ 
+      </div>
   </li>
 <!-- ======================================================================= -->
 <!-- ======================================================================= -->
