Kasi's Photo added

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -864,6 +864,9 @@ $\sum_{q^{20r}\le s \le q^{20r}+q^{16r}}e(sa/q)\ll q^{16r}(\log q)/\sqrt{\varphi
 	"G. Kasi Viswanadham", "OR_KV_new_version-06.pdf", 2021, 19, "Submitted");
 	nbrp();</script>
       <div class="resumecontent">
+<img src="../trucs/kasi-viswanadh.jpeg" height="110px"
+	     title="Kasi Viswanadh Gopajosyula">
+
 We consider exponential sums of the form 
 $$
 \sum_{X< p \leq 2X}f(p)(\log p) e(p\alpha)\; ,
