--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -824,14 +824,16 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       Paper("Modular Ternary Additive Problems with Irregular or Prime Numbers",
       "G. Kasi Viswanadham", "",
       "http://www.mathnet.ru/php/journal.phtml?jrnid=tm&option_lang=eng",
-      "Proceedings of the Steklov Institute of Mathematics", "Volume dedicated to I.M. Vinogradov",
-      2021, "48pp", 
+      "Proceedings of the Steklov Institute of Mathematics", "Volume
+      dedicated to I.M. Vinogradov, vol. 314",
+      2021, "211--247", 
       "http://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=tm&paperid=4191&option_lang=eng");
       nbr();</script>
     <div class="resumecontent">
 	<img src="../trucs/kasi-viswanadh.jpeg" height="110px"
 	     title="Kasi Viswanadh Gopajosyula">	
 
+      <a href="4191.pdf">Russian version</a>.
       Our initial problem is to represent classes $m$ modulo $q$ by a sum
   of three summands, two being taken from rather small sets $\mathcal{A}$ and
   $\mathcal{B}$ and the third one having an odd number of prime factors (the
