Added Higher Levin Fainleib

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1604,7 +1604,26 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       precise bound is given, as well as an extension to similar sums. The
       precise rate of decay is however, unknown.
     </div>
-  </li>
+    </li>
+    <!-- ============================= -->
+    <li class="paper preprint"><script language="javascript">
+	Preprint("Higher Order Levin-Fainleib Theorems",
+	"Alisa Sedunova and Ritika Sharma", , 2021, 15, "Being finalized");
+	nbrp();</script>
+      <div class="resumecontent">
+	<img src="../trucs/alisa-sedunova-2019.jpeg" height="110px"
+	     title="Alisa Sedunova">
+        <img src="../trucs/mystery.jpeg" height="110px"
+	     title="Ritika Sharma">
+
+	  While remaining in as general a context as Levin and Fainleib in
+	their 1967-paper, we obtain the asymptotic expression for
+	$\sum_{n\le x}\frac{f(n)}{n}\log^{h+1}n$ with the error term
+	$O((\log 2x)^\kappa\log\log(3x))$ for any non-negative
+	multiplicative function $f$ verifying $\sum_{m\le
+	Q}\Lambda_f(m)/m=\kappa\log Q+\eta_0+O(1/\log(2Q)^h)$. 
+      </div>
+    </li>
  <!-- ======================================================================= -->
 <!-- ======================================================================= -->
 <br>
