--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1608,7 +1608,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
     <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
 	Preprint("Higher Order Levin-Fainleib Theorems",
-	"Alisa Sedunova and Ritika Sharma", , 2021, 15, "Being finalized");
+	"Alisa Sedunova and Ritika Sharma", "", 2021, 15pp, "Being finalized");
 	nbrp();</script>
       <div class="resumecontent">
 	<img src="../trucs/alisa-sedunova-2019.jpeg" height="110px"
