--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -832,7 +832,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
     <div class="resumecontent">
 	<img src="../trucs/kasi-viswanadh.jpeg" height="110px"
 	     title="Kasi Viswanadh Gopajosyula">	
-      <a href="4191.pdf">Russian version</a>.
+       <!-- <a href="4191.pdf">Russian version</a>. -->
 <br>
       Our initial problem is to represent classes $m$ modulo $q$ by a sum
   of three summands, two being taken from rather small sets $\mathcal{A}$ and
