--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -824,8 +824,8 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       Paper("Modular Ternary Additive Problems with Irregular or Prime Numbers",
       "G. Kasi Viswanadham", "",
       "http://www.mathnet.ru/php/journal.phtml?jrnid=tm&option_lang=eng",
-      "Proceedings of the Steklov Institute of Mathematics", "Volume
-      dedicated to I.M. Vinogradov, vol. 314",
+      "Proceedings of the Steklov Institute of Mathematics", 
+      "Volume dedicated to I.M. Vinogradov, vol. 314",
       2021, "211--247", 
       "http://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=tm&paperid=4191&option_lang=eng");
       nbr();</script>
@@ -833,7 +833,6 @@ all moduli $k \le 72$&nbsp; and other small moduli.
 	<img src="../trucs/kasi-viswanadh.jpeg" height="110px"
 	     title="Kasi Viswanadh Gopajosyula">	
        <!-- <a href="4191.pdf">Russian version</a>. -->
-<br>
       Our initial problem is to represent classes $m$ modulo $q$ by a sum
   of three summands, two being taken from rather small sets $\mathcal{A}$ and
   $\mathcal{B}$ and the third one having an odd number of prime factors (the
@@ -1615,13 +1614,12 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
 	     title="Alisa Sedunova">
         <img src="../trucs/mystery.jpeg" height="110px"
 	     title="Ritika Sharma">
-
 	  While remaining in as general a context as Levin and Fainleib in
 	their 1967-paper, we obtain the asymptotic expression for
 	$\sum_{n\le x}\frac{f(n)}{n}\log^{h+1}n$ with the error term
 	$O((\log 2x)^\kappa\log\log(3x))$ for any non-negative
 	multiplicative function $f$ verifying $\sum_{m\le
-	Q}\Lambda_f(m)/m=\kappa\log Q+\eta_0+O(1/\log(2Q)^h)$. 
+	Q}\Lambda_f(m)/m = \kappa\log Q + \eta_0 + O(1/\log(2Q)^h)$. 
       </div>
     </li>
  <!-- ======================================================================= -->
