--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -832,7 +832,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
     <div class="resumecontent">
 	<img src="../trucs/kasi-viswanadh.jpeg" height="110px"
 	     title="Kasi Viswanadh Gopajosyula">	
-       <!-- <a href="4191.pdf">Russian version</a>. -->
+       <a href="4191.pdf">Russian version</a>. 
       Our initial problem is to represent classes $m$ modulo $q$ by a sum
   of three summands, two being taken from rather small sets $\mathcal{A}$ and
   $\mathcal{B}$ and the third one having an odd number of prime factors (the
@@ -1607,7 +1607,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
     <!-- ============================= -->
     <li class="paper preprint"><script language="javascript">
 	Preprint("Higher Order Levin-Fainleib Theorems",
-	"Alisa Sedunova and Ritika Sharma", "", 2021, 15pp, "Being finalized");
+	"Alisa Sedunova and Ritika Sharma", "", 2021, 15, "Being finalized");
 	nbrp();</script>
       <div class="resumecontent">
 	<img src="../trucs/alisa-sedunova-2019.jpeg" height="110px"
