--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1610,9 +1610,9 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
 	"Alisa Sedunova and Ritika Sharma", "", 2021, 15, "Being finalized");
 	nbrp();</script>
       <div class="resumecontent">
-	<img src="../trucs/alisa-sedunova-2019.jpeg" height="110px"
+	<img src="../trucs/alisa-sedunova-2019.jpg" height="110px"
 	     title="Alisa Sedunova">
-        <img src="../trucs/mystery.jpeg" height="110px"
+        <img src="../trucs/mystery.jpg" height="110px"
 	     title="Ritika Sharma">
 	  While remaining in as general a context as Levin and Fainleib in
 	their 1967-paper, we obtain the asymptotic expression for
