Btter menu for Maths

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -89,7 +89,20 @@ MathJax.Hub.Config({
 <dl id="MenuDroit"> 
 <dt>Navigation</dt>
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
-<dd><a href="#Recherche">Articles de recherche</a></dd>
+<dd>
+  <dl><dt><a href="#Recherche">Articles de recherche</a>
+    </dt>
+    <dd><a href="Sieve">Sieve</a></dd>
+    <dd><a href="Explicit">Explicit estimates on primes or on the Moebius function</a></dd>
+    <dd><a href="Bilinear">Bilinear sums on prime numbers</a></dd>
+    <dd><a href="Lfunctions">$L$-functions / primes in arithmetic progressions</a></dd>
+    <dd><a href="Matrices">Arithmetic of integer matrices</a></dd>
+    <dd><a href="Distribution">Distribution of polynomial values</a></dd>
+    <dd><a href="Harmonic">Harmonic analysis, discrepancy</a></dd>
+    <dd><a href="Divisors">Problems with divisors or arithmetical functions</a></dd>
+    <dd><a href="Combinatorial">Combinatorial problems</a></dd>
+  </dl>
+</dd>
 <dd><a href="#Livres">Livres / Books</a></dd>
 <dd><a href="#GPublic">Textes grand public / Large audience</a></dd>
 <dd><a href="#Teaching">Textes d'exposition / Expository papers</a></dd>
@@ -187,7 +200,8 @@ academical and personal purpose.</i></font></CENTER>
 <ol>
 <!-- ======================================================================= -->
 <!-- ======================================================================= -->
-  <li><span class="thema">Sieve</span>
+<li><a name="Sieve" class="dontmention"></a>
+  <span class="thema">Sieve</span>
   <ul><!-- ============================= -->
     <li class="paper">
       <script language="javascript">
@@ -439,7 +453,9 @@ of A. S&aacute;rk&ouml;zy.
 <!-- ======================================================================= -->
 <!-- ======================================================================= -->
 <!-- ======================================================================= -->
-  <li><span class="thema">Explicit estimates on primes or on the Moebius function</span>
+<li>
+  <a name="Explicit" class="dontmention"></a>
+  <span class="thema">Explicit estimates on primes or on the Moebius function</span>
   <ol>
 
   <!-- ============================= -->
@@ -780,7 +796,8 @@ all moduli $k \le 72$&nbsp; and other small moduli.
 </center>
 <br>
 <!-- ======================================================================= -->
-  <li><span class="thema">Bilinear sums on prime numbers</span>
+  <li><a name="Bilinear" class="dontmention"></a>
+    <span class="thema">Bilinear sums on prime numbers</span>
   <ol>
   <!-- ============================= -->
   <li class="paper"><script language="javascript">
@@ -896,7 +913,8 @@ $
   </ol><br>
   </li>
 <!-- ======================================================================= -->
-  <li><span class="thema">$L$-functions / primes in arithmetic progressions</span>
+  <li><a name="Lfunctions" class="dontmention"></a>
+    <span class="thema">$L$-functions / primes in arithmetic progressions</span>
   <ol>
   <!-- ============================= -->
   <li class="paper"><script language="javascript">
@@ -1067,7 +1085,8 @@ $
   </li>
 <!-- ======================================================================= -->
 <!-- ======================================================================= -->
-  <li><span class="thema">Arithmetic of integer matrices</span>
+  <li><a name="Matrices" class="dontmention"></a>
+    <span class="thema">Arithmetic of integer matrices</span>
   <ol>
   <!-- ============================= -->
   <li class="paper"><script language="javascript">
@@ -1153,7 +1172,8 @@ $
 
 <!-- ======================================================================= -->
 <!-- ======================================================================= -->
-  <li><span class="thema">Distribution of polynomial values</span>
+  <li><a name="Distribution" class="dontmention"></a>
+  <span class="thema">Distribution of polynomial values</span>
   <ol>
     <!-- ============================= -->
     <li class="paper"><script language="javascript">
@@ -1225,7 +1245,8 @@ $
   </li>
 <!-- ======================================================================= -->
 <!-- ======================================================================= -->
-  <li><span class="thema">Harmonic analysis, discrepancy</span>
+  <li><a name="Harmonic" class="dontmention"></a>
+  <span class="thema">Harmonic analysis, discrepancy</span>
   <ol>
   <!-- ============================= -->
   <li class="paper"><script language="javascript">
@@ -1454,7 +1475,8 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
 </center>
 <br><br>
 <!-- ======================================================================= -->
-  <li><span class="thema">Problems with divisors or arithmetical functions</span>
+  <li><a name="Divisors" class="dontmention"></a>
+  <span class="thema">Problems with divisors or arithmetical functions</span>
 
   <ol>
   <!-- ============================= -->
@@ -1633,7 +1655,8 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
 <br>
 
 <!-- ======================================================================= -->
-  <li><span class="thema">Combinatorial problems</span>
+  <li>a name="Combinatorial" class="dontmention"></a>
+  <span class="thema">Combinatorial problems</span>
     <ol>
   <!-- ============================= -->
   <li class="paper preprint"><script language="javascript">
