Btter menu for Maths

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -89,20 +89,25 @@ MathJax.Hub.Config({
 <dl id="MenuDroit"> 
 <dt>Navigation</dt>
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
-<dd>
-  <dl><dt><a href="#Recherche">Articles de recherche</a>
-    </dt>
-    <dd><a href="Sieve">Sieve</a></dd>
-    <dd><a href="Explicit">Explicit estimates on primes or on the Moebius function</a></dd>
-    <dd><a href="Bilinear">Bilinear sums on prime numbers</a></dd>
-    <dd><a href="Lfunctions">$L$-functions / primes in arithmetic progressions</a></dd>
-    <dd><a href="Matrices">Arithmetic of integer matrices</a></dd>
-    <dd><a href="Distribution">Distribution of polynomial values</a></dd>
-    <dd><a href="Harmonic">Harmonic analysis, discrepancy</a></dd>
-    <dd><a href="Divisors">Problems with divisors or arithmetical functions</a></dd>
-    <dd><a href="Combinatorial">Combinatorial problems</a></dd>
-  </dl>
-</dd>
+<dd><a href="#Recherche">Articles de recherche</a></dd>
+<dd>&nbsp;&nbsp;&nbsp;
+  <a href="#Sieve">Sieve</a></dd>
+<dd>&nbsp;&nbsp;&nbsp;
+  <a href="#Explicit">Explicit estimates on primes or on the Moebius function</a></dd>
+<dd>&nbsp;&nbsp;&nbsp;
+  <a href="#Bilinear">Bilinear sums on prime numbers</a></dd>
+<dd>&nbsp;&nbsp;&nbsp;
+  <a href="#Lfunctions">$L$-functions / primes in arithmetic progressions</a></dd>
+<dd>&nbsp;&nbsp;&nbsp;
+  <a href="#Matrices">Arithmetic of integer matrices</a></dd>
+<dd>&nbsp;&nbsp;&nbsp;
+  <a href="#Distribution">Distribution of polynomial values</a></dd>
+<dd>&nbsp;&nbsp;&nbsp;
+  <a href="#Harmonic">Harmonic analysis, discrepancy</a></dd>
+<dd>&nbsp;&nbsp;&nbsp;
+  <a href="#Divisors">Problems with divisors or arithmetical functions</a></dd>
+<dd>&nbsp;&nbsp;&nbsp;
+  <a href="#Combinatorial">Combinatorial problems</a></dd>
 <dd><a href="#Livres">Livres / Books</a></dd>
 <dd><a href="#GPublic">Textes grand public / Large audience</a></dd>
 <dd><a href="#Teaching">Textes d'exposition / Expository papers</a></dd>
