Btter menu for Maths

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -91,7 +91,7 @@ MathJax.Hub.Config({
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
 <dd><a href="#Recherche">Articles de recherche</a></dd>
 <dd>&nbsp;&nbsp;&nbsp;
-  <a href="#Sieve">Sieve</a></dd>
+  <a href="#Sieve"><font size="-1">Sieve</font></a></dd>
 <dd>&nbsp;&nbsp;&nbsp;
   <a href="#Explicit">Explicit estimates on primes or on the Moebius function</a></dd>
 <dd>&nbsp;&nbsp;&nbsp;
