Btter menu for Maths

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -90,8 +90,9 @@ MathJax.Hub.Config({
 <dt>Navigation</dt>
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
 <dd><a href="#Recherche">Articles de recherche</a></dd>
-<dd>&nbsp;&nbsp;&nbsp;
-  <a href="#Sieve"><font size="-1">Sieve</font></a></dd>
+<font size="-1">
+  <dd>&nbsp;&nbsp;&nbsp;
+  <a href="#Sieve">Sieve</a></dd>
 <dd>&nbsp;&nbsp;&nbsp;
   <a href="#Explicit">Explicit estimates on primes or on the Moebius function</a></dd>
 <dd>&nbsp;&nbsp;&nbsp;
@@ -108,6 +109,7 @@ MathJax.Hub.Config({
   <a href="#Divisors">Problems with divisors or arithmetical functions</a></dd>
 <dd>&nbsp;&nbsp;&nbsp;
   <a href="#Combinatorial">Combinatorial problems</a></dd>
+</font>
 <dd><a href="#Livres">Livres / Books</a></dd>
 <dd><a href="#GPublic">Textes grand public / Large audience</a></dd>
 <dd><a href="#Teaching">Textes d'exposition / Expository papers</a></dd>
