Biblio.php to Biblio.html

--- a/TME-EMT/accueil.html
+++ b/TME-EMT/accueil.html
@@ -185,7 +185,7 @@ Moree, Akhilesh P, Olivier Ramar&eacute;, Enrique Trevi&ntilde;o.
     <li class="tme-emt-second-menu-item"><a href="Articles/Art19.html">Primitive Roots</a></li>
   </ul></li>
   <li class = "tme-emt-main-biblio-item">
-    <a href = "Biblio/Biblio.php">Bibliography</a>
+    <a href = "Biblio/Biblio.html">Bibliography</a>
   </li>
   <li class = "tme-emt-main-booklet-item">
    Download <a href = "Latex/booklet.pdf">a rough PDF version.</a>
