--- a/TME-EMT/accueil.html
+++ b/TME-EMT/accueil.html
@@ -134,7 +134,8 @@ Moree, Akhilesh P, Olivier Ramar&eacute;, Enrique Trevi&ntilde;o.
     <li class="tme-emt-second-menu-item"><a href="Articles/Art01.html">Explicit bounds on primes</a></li>
     <li class="tme-emt-second-menu-item"><a href="Articles/Art02.html">Explicit bounds on the Moebius function</a></li>
     <li class="tme-emt-second-menu-item"><a href="Articles/Art10.html">Averages of non-negative multiplicative functions</a></li>
-    <li class="tme-emt-second-menu-item"><a href="Articles/Art12.html">Explicit upper bounds for some special arithmetic functions</a></li>
+    <li class="tme-emt-second-menu-item"><a href="Articles/Art12.html">Explicit
+    pointwise upper bounds for some arithmetic functions</a></li>
   </ul>
 </li>
   <li class = "tme-emt-main-menu-item">Exact computations
