--- a/Maths/PetitLivre.html
+++ b/Maths/PetitLivre.html
@@ -16,15 +16,11 @@
     <link  rel="stylesheet" href="../style.css" type="text/css" /> 
  
 </HEAD>
-<BODY BACKGROUND="http://math.univ-lille1.fr/~ramare/trucs/fond-ens.jpg"
+<BODY BACKGROUND="../trucs/fond-ens.jpg"
 TEXT="#000033" 
 LINK="#BB000" 
 VLINK="#BB0000" 
 ALINK="#EE0000">
-
-<?php
-  include 'compteur.php3';
-?>
 
 
 <CENTER>
@@ -134,8 +130,7 @@ Que faire si vous aimez ce livre ou la d&eacute;marche ?
 <br>
 <blockquote><FONT SIZE=+1><i>
 Les commentaires/remarques et autres corrections sont bienvenus ! 
-Utilisez mon adresse professionnelle (elle se trouve sur la page 
-http://math.univ-lille1.fr/~ramare/) et s'il vous plait, faites
+Utilisez mon adresse professionnelle et s'il vous plait, faites
 d&eacute;buter le sujet par "[PetitLivre]".
 </i></font></blockquote>
 <center>
