--- a/Maths/PetitLivre.html
+++ b/Maths/PetitLivre.html
@@ -34,12 +34,18 @@ ALINK="#EE0000">
 <blockquote>
 <FONT SIZE=+1><i> Voici donc un livre, plut&ocirc;t destin&eacute;
 &agrave; un public de non sp&eacute;cialistes.  On y traite de nombres
-premiers, et surtout d'une m&eacute;thode introduite par la math&eacute;maticien
+premiers, et surtout d'une m&eacute;thode introduite par le math&eacute;maticien
 russe I. M. Vinogradov vers 1937 pour les &eacute;tudier. Depuis, cette
 m&eacute;thode a bien s&ucirc;r &eacute;t&eacute; am&eacute;lior&eacute;e de
 nombreuses fa&ccedil;ons, mais l'id&eacute;e centrale reste de loin la plus
 forte. Disons ici rapidement que cette approche introduit des formes
-bilin&eacute;aires. Et bien que centrale et maintenant ancienne, cette id&eacute;e  ne semble pas
+    bilin&eacute;aires. Les lecteurs plus cap&eacute;s trouveront plus
+    d'informations dans
+    <a href="BilinearFormsEMS.pdf">cet article</a>.
+
+
+    <br><br>
+    Bien que centrale et maintenant ancienne, cette id&eacute;e  ne semble pas
 avoir r&eacute;ussi &agrave; sortir du cercle des sp&eacute;cialistes. 
 Aussi les ouvrages de vulgarisation s'en tiennent-ils souvent au
 th&eacute;or&egrave;me des nombres premiers, arrivent parfois &agrave;
