Correction adresse Bamako

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2295,8 +2295,8 @@ corr&eacute;ligionaires (voir aussi <a href="../GdT-TAN-Store/GdT-TAN-Store.html
 <!-- --------------------------------------------------------------------- -->
 <!-- --------------------------------------------------------------------- -->
 <li> -&#167;-
-<a class="someword" href="http://math.univ-bpclermont.fr/~royer/ens/Mali/M2_Mali.html">
- Le cours de Bamako 2012 (par E. Royer)</a> : 
+<a class="someword" href="http://lmbp.uca.fr/~royer/courses/m2_afrique/VersionWeb2019.pdf">
+ Le cours de Bamako 2019 (par E. Royer)</a> : 
   <emph><i>Un cours &laquo;africain&raquo; sur les formes modulaires</i></emph>. 
 <span class="moinsimportant">D&eacute;j&agrave; tr&egrave;s complet mais pas encore
   termin&eacute; !</span>
