--- a/Maths/PetitLivre.html
+++ b/Maths/PetitLivre.html
@@ -41,7 +41,7 @@ nombreuses fa&ccedil;ons, mais l'id&eacute;e centrale reste de loin la plus
 forte. Disons ici rapidement que cette approche introduit des formes
     bilin&eacute;aires. Les lecteurs plus cap&eacute;s trouveront plus
     d'informations dans
-    <a href="BilinearFormsEMS.pdf">cet article</a>.
+    <a href="http://www.ems-ph.org/journals/newsletter/pdf/2013-12-90.pdf">cet article</a>.
 
 
     <br><br>
