Descendance http to https

--- a/Epsilons/epsilon.html
+++ b/Epsilons/epsilon.html
@@ -19,7 +19,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../FromW3.css" type="text/css" />
 <script type="text/javascript" 
-        src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
    <script type="text/javascript"  src="../MiseEnPage.js"></script>
    <script type="text/javascript"  src="../MiseEnPage-2.js"></script>
@@ -40,7 +40,7 @@ MathJax.Hub.Config({
 });
 </script>
 <script type="text/javascript"
-  src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
 <!-- ============================================-->
@@ -307,13 +307,16 @@ functions.
 </li>
 </ol>
 
+<br>
 
 <center>
 <img src="../trucs/FromHmuifang-2019-moyen.JPG" width="900px"
      class="InTheMiddle"
      title="From the Hmuifang, Mizoram 2019 (1620 m)">
 </center>
-
+<br>
+<br>
+<br>
 
 </body>
 
