--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1662,7 +1662,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
 <br>
 
 <!-- ======================================================================= -->
-  <li>a name="Combinatorial" class="dontmention"></a>
+  <li><a name="Combinatorial" class="dontmention"></a>
   <span class="thema">Combinatorial problems</span>
     <ol>
   <!-- ============================= -->
