--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1378,11 +1378,11 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
   <!-- ============================= -->
   <li class="paper preprint"><script language="javascript">
       Preprint("Addendum to Modified Truncated Perron Formulae",
-      "", "TruncatedPerron-5-Addendum-01.pdf",
+      "", "TruncatedPerron-5-Addendum-04.pdf",
       2021,3,
       "Addendum to 'Modified Truncated Perron Formulae'");
       nbrp();</script>
-    <div class="resumecontent">This file is an addendum to the paper
+    <div class="resumecontent">This file is a corrigendum / addendum to the paper
     'Modified Truncated Perron Formulae' and contains a formula with a
     $\log$-free error term when the coefficients $a_n$ are assumed to be bounded. 
     </div>
