add quantitative Landau

--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -763,10 +763,10 @@ all moduli $k \le 72$&nbsp; and other small moduli.
   <!-- ============================= -->
   <li class="paper"><script language="javascript">
       Paper("Quantitative Steps in Axer-Landau Equivalence Theorem",
-      "", "", "http://journals.impan.gov.pl/aa/",
+      "", "QuantitativeLandau-08.pdf", "http://journals.impan.gov.pl/aa/",
 	    "Acta Arithmetica",
 	    "vol. 187 no 4", 2019, "345--355",
-	   "");
+	   "https://www.impan.pl/pl/wydawnictwa/czasopisma-i-serie-wydawnicze/acta-arithmetica/all/187/4/112839/quantitative-steps-in-the-axer-landau-equivalence-theorem");
       nbr();</script>
     <div class="resumecontent">Completing previous enquiries of the
     same nature, it is shown that, for every non-negative integer $h$,
