--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -90,6 +90,8 @@ MathJax.Hub.Config({
 <dt>Navigation</dt>
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
 <dd><a href="#Recherche">Articles de recherche</a></dd>
+  <span class="bidule">+</span>
+  <div class="moremenu">
 <font size="-1">
   <dd>&nbsp;&nbsp;&nbsp;
   <a href="#Sieve">Sieve</a></dd>
@@ -110,6 +112,7 @@ MathJax.Hub.Config({
 <dd>&nbsp;&nbsp;&nbsp;
   <a href="#Combinatorial">Combinatorial problems</a></dd>
 </font>
+</div>
 <dd><a href="#Livres">Livres / Books</a></dd>
 <dd><a href="#GPublic">Textes grand public / Large audience</a></dd>
 <dd><a href="#Teaching">Textes d'exposition / Expository papers</a></dd>
