--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -89,8 +89,8 @@ MathJax.Hub.Config({
 <dl id="MenuDroit"> 
 <dt>Navigation</dt>
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
-<dd><a href="#Recherche">Articles de recherche</a></dd>
-  <span class="bidule">+</span>
+<dd><a href="#Recherche">Articles de recherche</a>
+  <span class="bidule">+</span></dd>
   <div class="moremenu">
 <font size="-1">
   <dd>&nbsp;&nbsp;&nbsp;
