--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -201,16 +201,17 @@ academical and personal purpose.</i></font></CENTER>
 <!-- ======================================================================= -->
 
 
+<a name="Recherche" class="dontmention"></a>
 <ul>
 <li>
-<a name="Recherche" class="dontmention"></a>
   <font size=+2> Articles de recherche</font>
   <br><br>
 
 <ol>
 <!-- ======================================================================= -->
 <!-- ======================================================================= -->
-<li><a name="Sieve" class="dontmention"></a>
+<a name="Sieve" class="dontmention"></a>
+<li>
   <span class="thema">Sieve</span>
   <ul><!-- ============================= -->
     <li class="paper">
