--- a/ServeurPerso/GP-PARI/index.html
+++ b/ServeurPerso/GP-PARI/index.html
@@ -58,11 +58,11 @@ Beware that versions higher than 3.04 introduce an additional variable in pari-c
 </li>
 <li> The <a href="latest-pari-distrib/pariemacs-3.14.tar.gz">
     bundle</a> tarred and gzipped. The included
-  <a href="latest-pari-distrib/README">
+  <a href="latest-pari-distrib/README.txt">
   README</a> file contains the installation procedure.
 </li>
 <li> The explanation file :
-  <a href="latest-pari-distrib/README">
+  <a href="latest-pari-distrib/README.txt">
   README</a>.
 </li>
 <li> All the <a href="latest-pari-distrib/">
