--- a/ServeurPerso/GP-PARI/index.html
+++ b/ServeurPerso/GP-PARI/index.html
@@ -16,9 +16,9 @@ PARIEMACS: GP-SCRIPT-MODE / GP-MODE</H1>
 <BR>
 <BR>
 
-<i> Derni&egrave;re mise &agrave; jour :  4 d&eacute;cembre 2017.</i>
+<i> Derni&egrave;re mise &agrave; jour :  14 janvier 2022.</i>
 <BR>
-<i> Latest update :  December 4rth 2017.</i>
+<i> Latest update :  January 14th 2022.</i>
 
 <BR>
 <BR>
@@ -53,19 +53,19 @@ still sometimes used.
 
 <ul>
 <li>
-Latest version is numbered 3.14 for gp-stuff and 0.98 for sli-tools.el.
+Latest version is numbered 3.20 for gp-stuff and 1.00 for sli-tools.el.
 Beware that versions higher than 3.04 introduce an additional variable in pari-conf.el.
 </li>
-<li> The <a href="latest-pari-distrib/pariemacs-3.14.tar.gz">
+<li> The <a href="3.20/pariemacs-3.14.tar.gz">
     bundle</a> tarred and gzipped. The included
-  <a href="latest-pari-distrib/README.txt">
+  <a href="3.20/README.txt">
   README</a> file contains the installation procedure.
 </li>
 <li> The explanation file :
-  <a href="latest-pari-distrib/README.txt">
+  <a href="3.20/README.txt">
   README</a>.
 </li>
-<li> All the <a href="latest-pari-distrib/">
+<li> All the <a href="3.20/">
     files</a>.
 <li> The
   <a href="BugList.html"><b>bug list</b></a>.
