--- a/Jeux/IndexJeux.html
+++ b/Jeux/IndexJeux.html
@@ -954,6 +954,17 @@ function PlaySquareDance(){
 </SCRIPT>
 <a name="Top" class="dontmention"></a>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FDWZ1HDH2N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FDWZ1HDH2N');
+</script>
+<!-- ==================================== -->
+
 </HEAD>
 
 <BODY class="pas_surlignable page_rubrique"
