--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -58,6 +58,16 @@ MathJax.Hub.Config({
 <!-- End of the inclusion linked to MathJax      -->
 <!-- ============================================-->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FDWZ1HDH2N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FDWZ1HDH2N');
+</script>
+<!-- ==================================== -->
 
    <TITLE>Olivier Ramar&eacute; : Textes math&eacute;matiques</TITLE>
 <a name="Top" class="dontmention"></a>
