--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ MathJax.Hub.Config({
   <td style="vertical-align:middle;"><hr size="2px"width="10px" color="grey"></td>
   <td style="vertical-align:middle;">
   &nbsp;&nbsp;&nbsp;
-  <span class="cv"><a href="cv-2020-1.pdf">A short CV</a></span>
+  <span class="cv"><a href="cv-2022.pdf">A short CV</a></span>
   &nbsp;&nbsp;&nbsp;
   </td>
   <td style="vertical-align:middle;"><hr size="2px" width="10px" color="grey"> </td>
