--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -728,7 +728,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
       "International Journal of Number Theory", 
       "vol. 16 no 4", 2020, "747-766",
       "https://dx.doi.org/10.1142/S1793042120500384");
-      nbrp();</script>
+      nbr();</script>
     <div class="resumecontent">
 	<img src="../trucs/priyamvad-srivastav.jpeg" height="110px"
 	     title="Priyamvad Srivastav">	
